# nextjs-django

./: .gitignore  MIGRATION.md  README.md  build.sh  docker-compose.yaml
backend/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yaml  manage.py  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/Documents/: README.md
backend/Documents/.github/workflows/: release.yml
backend/Documents/Websocket/: Websocket.md
backend/Documents/pip/: release.yml
backend/Documents/pip/requirements/: base.txt  development.txt  production.txt
backend/Postman/: Django.json
backend/accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  views.py
backend/accounts/management/commands/: seed_rbac.py
backend/accounts/migrations/: 0001_initial.py  0002_twofactor_confirmed_emailotp.py
backend/api/: serializers.py  urls.py  views.py
backend/backend/: asgi.py  constants.py  tests.py  utils.py  wsgi.py
backend/backend/settings/: allauth.py  base.py  compressor.py  env_vars.py  graphql.py  timezone_language.py
backend/billing/: models.py  serializers.py  stripe_service.py  views.py  webhooks.py
backend/billing/fixtures/: plans.json
backend/billing/migrations/: 0001_initial.py
backend/blog/: models.py  serializers.py  views.py
backend/blog/migrations/: 0001_initial.py
backend/book_graphql/: Readme.md  apps.py  books.json  models.py  schema.py
backend/book_graphql/migrations/: 0001_initial.py
backend/chat/: Readme.md  consumers.py  views.py
backend/core/: models.py  serializers.py  views.py
backend/core/migrations/: 0001_initial.py
backend/locale/fr/LC_MESSAGES/: django.mo  django.po
backend/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
backend/nextjs_django/: __init__.py  asgi.py  context_processors.py  forms.py  logger.py  sitemaps.py  urls.py  views.py  wsgi.py
backend/nextjs_django/settings/: allauth.py  base.py  crispy_form.py  database.py  email.py  env_vars.py  google.py  rest.py  stripe.py
backend/nextjs_django/settings/environments/: container.py  development.py  virtualmachine.py
backend/profiles/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
backend/profiles/migrations/: 0001_initial.py
backend/profiles/templates/profiles/: profile_edit.html  profile_show.html
backend/scripts/: update_translation.bat  update_translation.sh
backend/templates/: _brandname.html  _navbar.html  about.html  base.html  home.html  swagger.html
backend/templates/account/: account_inactive.html  auth_base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
backend/templates/admin/: admin_base.html  login.html
backend/templates/registration/: password_reset_email.txt
backend/templates/socialaccount/: authentication_error.html  base.html  connections.html  login.html  login_cancelled.html  signup.html
backend/tenants/: urls.py  views.py
(+138 files in other folders)
